--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,12 @@
         "eigenstates",
         "Hellmann",
         "netname",
+        "omotopo",
         "openphysicsnotes",
         "qrcode",
         "studentifisicapisa",
+        "Wavefunction",
+        "Weyl",
         "widetilde"
     ],
     "cSpell.ignoreWords": [
