--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,6 +4,9 @@
         "paths": {
             "/*": [
                 "./*"
+            ],
+            "@ss/*": [
+                "./src/*"
             ]
         },
     }
